--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <body>
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
-<div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات 
-  /هنبيع ببلاش واكن الصنف مجاش✨</div>
+<div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات ✨</div>
   /
   هنبيع ببلاش واكن الصنف مجاش✨</div>
 
@@ -189,3 +188,4 @@ function closeModal(){ successModal.style.display='none'; }
 
 </body>
 </html>
+
