--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@ h1 { font-size:22px; margin-bottom:15px; }
 
 .product { border:1px solid #ccc; border-radius:10px; padding:10px; text-align:center; width:45%; max-width:180px; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); transition:0.3s; }
 .product:hover { box-shadow:0 4px 12px rgba(0,0,0,0.2); }
-.product img { width:100%; height:auto; border-radius:5px; }
+.product img { width:100%; height:150px; object-fit:cover; border-radius:5px; }
 .name { font-size:16px; margin:5px 0; color:#333; }
 .product input { width:50px; margin:5px 0; border-radius:5px; border:1px solid #ccc; text-align:center; }
 .product button { padding:5px 10px; border:none; border-radius:5px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
@@ -39,7 +39,8 @@ h1 { font-size:22px; margin-bottom:15px; }
 #contactNumbers a:hover { text-decoration:underline; }
 
 @media(max-width:600px){
-    .product { width:45%; max-width:45%; }
+    .product { width:90%; max-width:90%; }
+    .product img { height:180px; }
     h1 { font-size:20px; }
     .logo { font-size:18px; padding:10px; }
 }
@@ -73,30 +74,48 @@ h1 { font-size:22px; margin-bottom:15px; }
 const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
 const container = document.getElementById("products-container");
 let productsData = [];
+let cart = [];
 
-function fetchProducts(){
+// جلب المنتجات مع التحميل التدريجي
+function fetchProducts(batchSize = 20){
     fetch(SCRIPT_PRODUCTS_URL)
       .then(res => res.json())
       .then(data => {
           productsData = data;
           container.innerHTML = "";
-          data.forEach((item, index) => {
-              const div = document.createElement("div");
-              div.className = "product";
-              div.innerHTML = `
-                  <img src="${item.image}" alt="${item.name}" loading="lazy">
-                  <div class="name">${item.name}</div>
-                  <div>السعر: ${item.price} جنيه</div>
-                  <input type="number" min="1" value="1" data-index="${index}">
-                  <button onclick="addToCart(${index})">أضف إلى السلة</button>
-              `;
-              container.appendChild(div);
-          });
+          loadBatch(0, batchSize);
       })
       .catch(err => console.log("❌ خطأ في جلب المنتجات: ", err));
 }
 
-let cart = [];
+function loadBatch(start, batchSize){
+    const end = Math.min(start + batchSize, productsData.length);
+    for(let i=start; i<end; i++){
+        const item = productsData[i];
+        const div = document.createElement("div");
+        div.className = "product";
+        div.innerHTML = `
+            <img src="${item.image}" alt="${item.name}" loading="lazy">
+            <div class="name">${item.name}</div>
+            <div>السعر: ${item.price} جنيه</div>
+            <input type="number" min="1" value="1" data-index="${i}">
+            <button onclick="addToCart(${i})">أضف إلى السلة</button>
+        `;
+        container.appendChild(div);
+    }
+
+    // تحميل المزيد عند التمرير
+    if(end < productsData.length){
+        const observer = new IntersectionObserver(entries => {
+            if(entries[0].isIntersecting){
+                observer.disconnect();
+                loadBatch(end, batchSize);
+            }
+        });
+        observer.observe(container.lastChild);
+    }
+}
+
 function addToCart(index){
     const input = container.querySelector(`input[data-index='${index}']`);
     const quantity = parseInt(input.value);
@@ -109,7 +128,7 @@ function showTotal(){
     cart.forEach((qty, idx) => { if(qty) total += qty * productsData[idx].price; });
     document.getElementById("totalAmount").innerText = total;
     document.getElementById("totalModal").style.display = 'block';
-    document.getElementById("contactNumbers").style.display = 'none'; // اخفاء الارقام قبل الضغط على ارسال
+    document.getElementById("contactNumbers").style.display = 'none';
 }
 
 function closeTotalModal(){ document.getElementById("totalModal").style.display = 'none'; }
