--- a/products.html
+++ b/products.html
@@ -5,39 +5,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>عرض المنتجات</title>
 <style>
-body { font-family: Tahoma, sans-serif; text-align:center; padding:10px; margin:0; background:#f9f9f9; }
+body { font-family: Tahoma,sans-serif; text-align:center; padding:10px; margin:0; background:#f9f9f9; }
 .logo { background:#25d366; color:white; font-size:20px; font-weight:bold; padding:15px; border-radius:10px; margin-bottom:20px; display:inline-block; }
 h1 { font-size:22px; margin-bottom:15px; }
-
 #products-container { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; }
-
 .product { border:1px solid #ccc; border-radius:10px; padding:10px; text-align:center; width:45%; max-width:180px; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); transition:0.3s; }
-.product:hover { box-shadow:0 4px 12px rgba(0,0,0,0.2); }
 .product img { width:100%; height:150px; object-fit:cover; border-radius:5px; }
 .name { font-size:16px; margin:5px 0; color:#333; }
 .product input { width:50px; margin:5px 0; border-radius:5px; border:1px solid #ccc; text-align:center; }
 .product button { padding:5px 10px; border:none; border-radius:5px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
 .product button:hover { background:#6a1fbf; transform:scale(1.05); }
-
-.support-btn, .total-btn {
-    position: fixed; padding:15px 20px; border-radius:50px; color: #fff; font-weight:bold; cursor: pointer;
-    box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; z-index:1001;
-}
+.support-btn, .total-btn { position: fixed; padding:15px 20px; border-radius:50px; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; z-index:1001; }
 .support-btn { top:10px; left:10px; background:#ff5722; }
 .support-btn:hover { background:#e64a19; transform:scale(1.1); }
 .total-btn { bottom:20px; right:20px; background:#00bfff; font-size:18px; padding:20px 25px; }
 .total-btn:hover { background:#009acd; transform:scale(1.05); }
-
-#totalModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
-    background:#fff; padding:20px; border-radius:15px; box-shadow:0 3px 15px rgba(0,0,0,0.3); text-align:center; z-index:1002; width:90%; max-width:400px; }
+#totalModal { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; padding:20px; border-radius:15px; box-shadow:0 3px 15px rgba(0,0,0,0.3); text-align:center; z-index:1002; width:90%; max-width:400px; }
 #totalModal h2 { font-size:20px; margin-bottom:15px; color:#8a2be2; }
 #totalModal button { margin:10px; padding:10px 20px; border:none; border-radius:10px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; transition:0.3s; }
 #totalModal button:hover { background:#6a1fbf; }
-
 #contactNumbers { margin-top:15px; display:none; }
 #contactNumbers a { display:block; color:#25d366; font-weight:bold; text-decoration:none; margin:5px 0; }
 #contactNumbers a:hover { text-decoration:underline; }
-
+.toast { position:fixed; bottom:100px; left:50%; transform:translateX(-50%); background:#8a2be2; color:#fff; padding:10px 20px; border-radius:10px; opacity:0; transition:0.5s; z-index:1003; }
 @media(max-width:600px){
     .product { width:90%; max-width:90%; }
     .product img { height:180px; }
@@ -52,13 +42,9 @@ h1 { font-size:22px; margin-bottom:15px; }
 <h1>المنتجات</h1>
 <div id="products-container"></div>
 
-<!-- زر الدعم الفني -->
 <button class="support-btn" onclick="window.open('https://wa.me/201022495795','_blank')">الدعم الفني</button>
-
-<!-- زر اجمالي الفاتورة -->
 <button class="total-btn" onclick="showTotal()">اجمالي الفاتورة</button>
 
-<!-- نافذة اجمالي الفاتورة -->
 <div id="totalModal">
     <h2>اجمالي الفاتورة: <span id="totalAmount">0</span> جنيه</h2>
     <button onclick="sendOrder()">ارسال</button>
@@ -70,75 +56,64 @@ h1 { font-size:22px; margin-bottom:15px; }
     </div>
 </div>
 
+<div class="toast" id="toast">تم الإضافة للسلة</div>
+
 <script>
-const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/AKfycbxW3_pcjSfffMTLZefZpzFIrbhijiaWY_u_4ZAmXEV2O04SMN5zplucKnAugWWbP8zzmA/exec";
+const SCRIPT_PRODUCTS_URL = "https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec";
 const container = document.getElementById("products-container");
-let productsData = [];
-let cart = [];
+let productsData = [], cart = [];
 
-// جلب المنتجات مع التحميل التدريجي
-function fetchProducts(batchSize = 20){
-    fetch(SCRIPT_PRODUCTS_URL)
-      .then(res => res.json())
-      .then(data => {
-          productsData = data;
-          container.innerHTML = "";
-          loadBatch(0, batchSize);
-      })
-      .catch(err => console.log("❌ خطأ في جلب المنتجات: ", err));
-}
+// جلب كل المنتجات دفعة واحدة بسرعة
+fetch(SCRIPT_PRODUCTS_URL)
+  .then(res => res.json())
+  .then(data => {
+      productsData = data;
+      const fragment = document.createDocumentFragment();
+      data.forEach((item,i)=>{
+          const div = document.createElement("div");
+          div.className="product";
+          div.innerHTML = `
+              <img src="${item.image}" alt="${item.name}" loading="lazy">
+              <div class="name">${item.name}</div>
+              <div>السعر: ${item.price || 0} جنيه</div>
+              <input type="number" min="1" value="1" data-index="${i}">
+              <button onclick="addToCart(${i})">أضف إلى السلة</button>
+          `;
+          fragment.appendChild(div);
+      });
+      container.appendChild(fragment);
+  })
+  .catch(err=>console.log("❌ خطأ في جلب المنتجات: ", err));
 
-function loadBatch(start, batchSize){
-    const end = Math.min(start + batchSize, productsData.length);
-    for(let i=start; i<end; i++){
-        const item = productsData[i];
-        const div = document.createElement("div");
-        div.className = "product";
-        div.innerHTML = `
-            <img src="${item.image}" alt="${item.name}" loading="lazy">
-            <div class="name">${item.name}</div>
-            <div>السعر: ${item.price} جنيه</div>
-            <input type="number" min="1" value="1" data-index="${i}">
-            <button onclick="addToCart(${i})">أضف إلى السلة</button>
-        `;
-        container.appendChild(div);
-    }
-
-    // تحميل المزيد عند التمرير
-    if(end < productsData.length){
-        const observer = new IntersectionObserver(entries => {
-            if(entries[0].isIntersecting){
-                observer.disconnect();
-                loadBatch(end, batchSize);
-            }
-        });
-        observer.observe(container.lastChild);
-    }
-}
-
+// إضافة للسلة بدون alert ثقيل
 function addToCart(index){
     const input = container.querySelector(`input[data-index='${index}']`);
     const quantity = parseInt(input.value);
     cart[index] = quantity;
-    alert(`${productsData[index].name} تمت اضافته/تحديثه في السلة`);
+    showToast(`${productsData[index].name} تم إضافته/تحديثه`);
+}
+
+function showToast(msg){
+    const toast = document.getElementById("toast");
+    toast.innerText = msg;
+    toast.style.opacity = 1;
+    setTimeout(()=>{toast.style.opacity=0},1500);
 }
 
 function showTotal(){
-    let total = 0;
-    cart.forEach((qty, idx) => { if(qty) total += qty * productsData[idx].price; });
-    document.getElementById("totalAmount").innerText = total;
-    document.getElementById("totalModal").style.display = 'block';
-    document.getElementById("contactNumbers").style.display = 'none';
+    let total=0;
+    cart.forEach((qty,idx)=>{ if(qty) total += qty*productsData[idx].price; });
+    document.getElementById("totalAmount").innerText=total;
+    document.getElementById("totalModal").style.display='block';
+    document.getElementById("contactNumbers").style.display='none';
 }
 
-function closeTotalModal(){ document.getElementById("totalModal").style.display = 'none'; }
+function closeTotalModal(){ document.getElementById("totalModal").style.display='none'; }
 
 function sendOrder(){
-    document.getElementById("contactNumbers").style.display = 'block';
-    alert("تم ارسال اجمالي الفاتورة\nيمكن التواصل عبر الأرقام الظاهرة الآن");
+    document.getElementById("contactNumbers").style.display='block';
+    showToast("تم ارسال اجمالي الفاتورة\nيمكن التواصل عبر الأرقام الظاهرة الآن");
 }
-
-fetchProducts();
 </script>
 </body>
 </html>
